force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>This object is for Pre Surveys and Post Surveys, for all Operating Companies, if needed
Might also be used for Question Pro</description>
    <label>Survey</label>
    <nameField>
        <label>Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>