force-app/main/default/objects/Survey__c/fields/CurrentMethod__c.field-meta.xml
<CustomField>
    <fullName>CurrentMethod__c</fullName>
    <description>MBO: 1 - Mijn huidige methode is
VO: 1 - Huidige methode</description>
    <inlineHelpText>MBO: 1 - Mijn huidige methode is
VO: 1 - Huidige methode</inlineHelpText>
    <label>Current Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>