force-app/main/default/objects/Survey__c/fields/FormID__c.field-meta.xml
<CustomField>
    <fullName>FormID__c</fullName>
    <label>Form ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>