force-app/main/default/objects/Survey__c/fields/JobTitleMBO__c.field-meta.xml
<CustomField>
    <fullName>JobTitleMBO__c</fullName>
    <description>MBO: 7 - Mijn functie is:</description>
    <inlineHelpText>MBO: 7 - Mijn functie is:</inlineHelpText>
    <label>Job Title MBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>