force-app/main/default/objects/Survey__c/fields/LocationKlopotekID__c.field-meta.xml
<CustomField>
    <fullName>LocationKlopotekID__c</fullName>
    <label>Location Klopotek ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>