force-app/main/default/objects/Survey__c/fields/MoreTitles__c.field-meta.xml
<CustomField>
    <fullName>MoreTitles__c</fullName>
    <description>HO: 9 - Welke andere titels naast deze overweegt u voor te schrijven voor dit vak/deze module?</description>
    <inlineHelpText>HO: 9 - Welke andere titels naast deze overweegt u voor te schrijven voor dit vak/deze module?</inlineHelpText>
    <label>More Titles</label>
    <length>255</length>
    <type>Text</type>
</CustomField>