force-app/main/default/objects/Survey__c/fields/ReasonOrder__c.field-meta.xml
<CustomField>
    <fullName>ReasonOrder__c</fullName>
    <description>HO: 1 - Wat is de reden van uw aanvraag?
MBO: 3 - De reden van mijn aanvraag is:</description>
    <inlineHelpText>HO: 1 - Wat is de reden van uw aanvraag?
MBO: 3 - De reden van mijn aanvraag is:</inlineHelpText>
    <label>Reason Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Oriëntatie op nieuw leermiddel in verband met gewijzigd curriculum</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Oriëntatie op leermiddel dat beter geschikt is dan de huidige leermiddelen</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Gebruikersexemplaar: de vorige editie staat al op de boekenlijst</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Algemene interesse</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Gebruikersexemplaar: de huidige editie staat al op de boekenlijst</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Niet tevreden met huidig lesmateriaal</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Orïentatie voor nieuw leermiddel op de boekenlijst voor komend schooljaar</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Gebruikersexemplaar (we schrijven deze methode al voor)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>