force-app/main/default/objects/Survey__c/fields/SchoolTypeMBO__c.field-meta.xml
<CustomField>
    <fullName>SchoolTypeMBO__c</fullName>
    <description>MBO: 4 - Ik ben verbonden aan schooltype:</description>
    <inlineHelpText>MBO: 4 - Ik ben verbonden aan schooltype:</inlineHelpText>
    <label>School Type MBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>