force-app/main/default/objects/Survey__c/fields/SectorHO__c.field-meta.xml
<CustomField>
    <fullName>SectorHO__c</fullName>
    <description>HO: 6 - Van welke sector maakt het vak/onderwerp/module onderdeel uit?</description>
    <inlineHelpText>HO: 6 - Van welke sector maakt het vak/onderwerp/module onderdeel uit?</inlineHelpText>
    <label>Sector HO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Landbouw &amp; Natuurlijke Omgeving</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Economie</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Gezondheidszorg</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Onderwijs</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Gedrag &amp; Maatschappij</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Techniek</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Kunst</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>