force-app/main/default/objects/Survey__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>HO: 3 - Wat is de aanvangsdatum van het vak/onderwerp/module?</description>
    <inlineHelpText>HO: 3 - Wat is de aanvangsdatum van het vak/onderwerp/module?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>