force-app/main/default/objects/Survey__c/fields/Students__c.field-meta.xml
<CustomField>
    <fullName>Students__c</fullName>
    <description>HO: 8 - Hoeveel studenten gaan met dit boek werken als het op de boekenlijst zou komen?
MBO: 6 - Wat is het aantal studenten die deze methode mogelijk gaan gebruiken?</description>
    <inlineHelpText>HO: 8 - Hoeveel studenten gaan met dit boek werken als het op de boekenlijst zou komen?
MBO: 6 - Wat is het aantal studenten die deze methode mogelijk gaan gebruiken?</inlineHelpText>
    <label># Students</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>0-50</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>51-100</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>101-200</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>201-300</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>301-400</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>401-500</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>500 of meer</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>50 - 100</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>100-200</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>&gt;200</label>
            </value>
            <value>
                <fullName>L1</fullName>
                <label>1-24</label>
            </value>
            <value>
                <fullName>L2</fullName>
                <label>25-49</label>
            </value>
            <value>
                <fullName>L3</fullName>
                <label>50-199</label>
            </value>
            <value>
                <fullName>L4</fullName>
                <label>200-299</label>
            </value>
            <value>
                <fullName>L5</fullName>
                <label>300 el fler</label>
            </value>
            <value>
                <fullName>L6</fullName>
                <label>50-99</label>
            </value>
            <value>
                <fullName>L7</fullName>
                <label>100-149</label>
            </value>
            <value>
                <fullName>L8</fullName>
                <label>150-249</label>
            </value>
            <value>
                <fullName>L9</fullName>
                <label>250 el fler</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>