force-app/main/default/objects/Survey__c/fields/StudyTypeHO__c.field-meta.xml
<CustomField>
    <fullName>StudyTypeHO__c</fullName>
    <description>HO: 7 - Van welke opleiding maakt het vak/onderwerp/module onderdeel uit?</description>
    <inlineHelpText>HO: 7 - Van welke opleiding maakt het vak/onderwerp/module onderdeel uit?</inlineHelpText>
    <label>Study Type HO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Accountancy</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Andere Economische opleiding</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Andere Kunstopleiding</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Andere Landbouwopleiding</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Andere Lerarenopleiding</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Andere Opleiding Gedrag &amp; Maatschappij</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Andere Opleiding Gezondheidszorg</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Andere Techniekopleiding</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Bachelor Muziek</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Bachelor Vormgeving</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Bedrijfseconomie</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Bedrijfskunde &amp; Agribusiness</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Bedrijfskunde MER</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Bestuurskunde/Overheidsmanagement</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Bouwkunde</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Bouwtechnische Bedrijfskunde</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Built Environment</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Business Studies</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Civiele Techniek</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Commerciele Economie/Commercieel Management</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Communicatie/Communicatiesystemen</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Communication &amp; Multimedia Design</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Creative Game Technologies</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Culturele &amp; Maatschappelijke Vorming</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Dier &amp; Veehouderij</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Elektrotechniek</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Engineering</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>European Studies</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Facility Management</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Fashion and Textile Technologies</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>