force-app/main/default/objects/Survey__c/fields/StudyTypeMBO__c.field-meta.xml
<CustomField>
    <fullName>StudyTypeMBO__c</fullName>
    <description>MBO: 5 - Ik ben verbonden aan de opleiding:</description>
    <inlineHelpText>MBO: 5 - Ik ben verbonden aan de opleiding:</inlineHelpText>
    <label>Study Type MBO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>