force-app/main/default/objects/Survey__c/fields/StudyYear__c.field-meta.xml
<CustomField>
    <fullName>StudyYear__c</fullName>
    <description>HO: 5 - In welk leerjaar wordt het vak/onderwerp/module gegeven?</description>
    <inlineHelpText>HO: 5 - In welk leerjaar wordt het vak/onderwerp/module gegeven?</inlineHelpText>
    <label>Study Year</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>