force-app/main/default/objects/Survey__c/fields/WhichSchoolYear__c.field-meta.xml
<CustomField>
    <fullName>WhichSchoolYear__c</fullName>
    <description>MBO: 2 - Mijn school stapt over op een nieuwe methode in
VO: 2 - Mijn school stapt over op een nieuwe methode in</description>
    <inlineHelpText>MBO: 2 - Mijn school stapt over op een nieuwe methode in
VO: 2 - Mijn school stapt over op een nieuwe methode in</inlineHelpText>
    <label>Which School Year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>