force-app/main/default/objects/Survey__c/fields/WhichSubject__c.field-meta.xml
<CustomField>
    <fullName>WhichSubject__c</fullName>
    <description>HO: 2 - Voor welk vak/onderwerp/module gaat u het boek beoordelen?</description>
    <inlineHelpText>HO: 2 - Voor welk vak/onderwerp/module gaat u het boek beoordelen?</inlineHelpText>
    <label>Which Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>