force-app/main/default/objects/Survey__c/fields/WhoDecides__c.field-meta.xml
<CustomField>
    <fullName>WhoDecides__c</fullName>
    <description>HO: 4 - Wie neemt de eindbeslissing over welk boek op de lijst komt te staan?</description>
    <inlineHelpText>HO: 4 - Wie neemt de eindbeslissing over welk boek op de lijst komt te staan?</inlineHelpText>
    <label>Who Decides</label>
    <length>255</length>
    <type>Text</type>
</CustomField>